test/libsolidity/syntaxTests/visibility/function_no_visibility.sol
contract C {
    function f() pure { }
}
// ----
// SyntaxError: (17-38): No visibility specified. Did you intend to add "public"?
